2007-01-16  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS.

=== GDL 0.7.0 ===

2007-01-14  Naba Kumar  <naba@gnome.org>

	* NEWS: updated for 0.7.0 release.
	
2006-09-18  Johannes Schmid <jhs@gnome.org>

	* configure.in:
	* gdl-gnome-1.0.pc.in (added):
	* gdl/Makefile.am:
	
	Split the library into libgdl (gtk only) and libgdl-gnome (with gnome support)
	Bumped version to 0.7.0 (because of obvious API changes)
	
2006-07-31  Johannes Schmid <jhs@gnome.org>

	* gdl/gdl-tools.c (removed):
	* gdl/gdl-tools.h:
	
	Removed bonobo-depency in gdl-tools.h and remove gdl-tools.c

2006-07-28  Johannes Schmid <jhs@gnome.org>

	* configure.in: Fixed --disable-gnome
	* autogen.sh: Always use automake-1.9

2006-07-19  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* gdl/gdl-dock-item.c:
	* gdl/gdl-dock-master.c
	- Fixed a type which prevent the preview window from beeing shown
	- Fixed restoring of splitter positions

2006-07-08  Fredrik Axelsson <fraxbe@gmail.com>

	reviewed by: Johannes Schmid <jhs@cvs.gnome.org>

	* gdl/gdl-dock-item.c:
	* gdl/gdl-dock-master.c:
	* gdl/gdl-dock-placeholder.c:
	
	Make Gdl able to restore "floating" docks

2006-06-13  Johannes Schmid <jhs@cvs.gnome.org>
	
	* configure.in: Fixed configure script (#344678)

2006-06-01  Johannes Schmid <jhs@cvs.gnome.org>

	* autogen.sh:
	* configure.in:
	* gdl/Makefile.am:
	* gdl/gdl-dock-master.c:
	* gdl/gdl-dock.c:
	* gdl/gdl-stock.c:
	* gdl/gdl-tools.h:
	* gdl/gdl.h:

	* gdl/gdl-recent.c:
	* gdl/gdl-recent.h:
	Removed: Use GtkRecent instead

	Merged gdl-gtk to HEAD

2006-05-25  Naba Kumar  <naba@gnome.org>

	* gdl/gdl-dock-item.c, gdl/gdl-dock-placeholder.c:
	Added width and height properties for placeholer
	and restore the dock item dimension when they are attached to
	the placeholder. Set placeholder width/height when items are
	hidden. Prevent placeholders to lose their hosts when the dock
	is reduced to the the root.
	